test/fails/bad_tags/mult4.lgl
void main() {
    tag a is vec2;
    tag b is vec2;

    a x = [1., 1.];
    b->a b_a = [[1., 1.], [1., 1.]];
    vec2 bad = x * b_a; // No possible cast
}